# directory_compare

./: Cargo.toml  README.md
src/: .lib.rs.swp  lib.rs
testdata/lhs/: binary  differing.txt
testdata/rhs/: binary  differing.txt  exec.sh  file2.txt
testdata/rhs/subdirectory/: file3.txt
